Contrast error fix

--- a/styles/myownstyle.css
+++ b/styles/myownstyle.css
@@ -64,7 +64,6 @@ h1, li, p {
   .footer-wrap {
     font-size: 26px;
     color: white;
-    text-shadow: 0px 0px 10px #000000;
     text-align: center;
     padding: 10px;
     font-family: "Lucida Console", "Courier New", monospace;
@@ -72,5 +71,5 @@ h1, li, p {
 
   .updated {
     font-size: 24px;
-    color: purple;
+    color: orangered;
   }
